scss/main.scss
@import "config";
@import "menu";
@import "home";
@import "services";
@import "contact";
@import "sign-in";
@import "sign-up";
@import "responsive";

html {
  @include transition-ease;
}

header {
  position: fixed;
  z-index: 2;
  width: 100%;
  padding: 1rem;
  background: black;
  text-align: right;

  .nav {
    .logo {
      font-family: "Marck Script", cursive;
      float: left;
      font-size: 1.5rem;
      color: rgb(224, 224, 224);
    }

    .sign-in,
    .sign-up {
      font-size: 1rem;
      margin-right: 0rem;
    }

    .sign-in.active,
    .sign-up.active {
      color: $primary-color;
    }

    #slash {
      color: white;
      margin: 0 0.5rem;
    }

    ul li {
      display: inline;
      font-family: "Baloo 2", cursive;
    }

    a {
      outline: none;
      color: white;
      font-size: 1.5rem;
      margin-right: 2rem;
      text-decoration: none;
      @include transition-ease;

      &:hover {
        color: $primary-color;
      }
    }

    .menu-nav__item.active > a {
      color: $primary-color;
    }
  }

  /* Beginning of cart code */
  .cart__openBtn,
  .cart__closeBtn {
    cursor: pointer;
  }

  .cart__closeBtn {
    position: fixed;
    font-size: 1.5rem;
    @include transition-ease;

    &:hover {
      color: $primary-color;
    }
  }

  .cart-overlay {
    position: fixed;
    top: 0;
    right: 0;
    width: 100%;
    height: 100%;
    @include transition-ease;
    background: rgba(112, 112, 112, 0.5);
    z-index: 2;
    visibility: hidden;
  }

  .cart {
    position: fixed;
    top: 0;
    right: 0;
    height: 100%;
    overflow: auto;
    z-index: 3;
    background: black;
    padding: 1.5rem;
    @include transition-ease;
    border: 2px groove $secondary-color;
    transform: translateX(100%);
    text-align: center;
    letter-spacing: 2px;
    font-family: "Baloo 2", cursive;
    color: rgb(224, 224, 224);
  }

  .span-primary {
    color: $primary-color;
  }

  .transparentBcg {
    visibility: visible;
  }

  .showcart {
    transform: translateX(0);
  }
  /* End of cart code */
  /* Beginning of View code */
  .one,
  .two,
  .three,
  .four,
  .five,
  .six,
  .seven,
  .eight,
  .nine,
  .ten {
    &__view__openBtn,
    &__view__closeBtn {
      cursor: pointer;
    }

    &__view__closeBtn {
      float: right;
      font-size: 1.5rem;
      @include transition-ease;

      &:hover {
        color: $primary-color;
      }
    }

    &__view-overlay {
      position: fixed;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      @include transition-ease;
      background: rgba(112, 112, 112, 0.5);
      z-index: 2;
      visibility: hidden;
    }

    &__view {
      position: fixed;
      top: 0;
      left: 0;
      height: 100%;
      overflow: auto;
      z-index: 3;
      background: black;
      padding: 1.5rem;
      @include transition-ease;
      border: 2px groove $secondary-color;
      transform: translateX(-100%);
      text-align: center;
      letter-spacing: 2px;
      font-family: "Baloo 2", cursive;
      color: rgb(224, 224, 224);
    }

    &__transparentBcg {
      /* This is required, but duplicated from the cart */
      visibility: visible;
    }

    &__showview {
      transform: translateX(0);
    }
  }
  /* End of View code */
}

.mug-logo {
  color: rgb(224, 224, 224);
}

.logo-first {
  color: $secondary-color;
  text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 rgb(37, 37, 37),
    -1px 1px 0 rgb(37, 37, 37), 1px 1px 0 rgb(37, 37, 37);
}

.logo-last {
  color: $primary-color;
  text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 rgb(37, 37, 37),
    -1px 1px 0 rgb(37, 37, 37), 1px 1px 0 rgb(37, 37, 37);
}

footer {
  font-family: "Baloo 2", cursive;

  .icons {
    font-size: 2.5rem;
    display: inline;
    padding: 0;
    margin: 0;

    a {
      color: black;
      outline: none;
      text-decoration: none;
      margin: 0.5rem;
      @include transition-ease;

      &:hover {
        color: $hover-color;
      }
    }
  }

  .copyright {
    padding: 0;
    margin-top: 2rem;
    float: right;
  }
}

